2009-10-22  Thomas Heller  <theller@python.net>

	* Fixed a regression from the 0.4 version, [out] parameters didn't
	accept pointers or arrays any longer. Thanks again to Michael
	Eddington.

2009-10-19  Thomas Heller  <theller@python.net>

	* Fix a memory leak in Python COM servers.  Thanks to Michael
	Eddington for the patch.

2009-10-02  Thomas Heller  <theller@python.net>

	* comtypes\test\test_server.py: Start a better approach to test
	both COM object calls and COM object implementations.

2009-09-09  Thomas Heller  <theller@python.net>

	* Fix returning SAFEARRAY of VT_RECORDs.  Based on a patch from
	Eduardo Arias.

	* New module comtypes.viewobject, contains the interfaces
	IViewObject, IViewObject2, IViewObjectEx.  IAdviseSink is faked.

	* Change version number to 0.6.2dev.

2009-09-04  Thomas Heller  <theller@python.net>

	* CoTaskMemFree does not return a HRESULT.  Patch from James Teh.

2009-08-19  Thomas Heller  <theller@python.net>

	* Bumped version number to 0.6.1.

2009-08-07  Thomas Heller  <theller@python.net>

	* When an interface was specified in the call to
	IClassObject.CreateInstance, return that instead of calling
	GetBestInterface.  Patch from James Teh.

2009-08-04  Thomas Heller  <theller@python.net>

	* Added comtypes.CoGetClassObject() low-level function,
	comtypes.client.GetClassObject() high-level function, and
	implemented a pythonic interface to IClassFactory's CreateInstance
	method:

	    def CreateInstance(self,
			       punkouter=None,
			       interface=None,
			       dynamic=False)

	* Added the 'dynamic=False' parameter to the
	comtypes.client.CoGetObject and comtypes.client.GetActiveObject
	functions.  Suggested by James Teh.

2009-06-17  Thomas Heller  <theller@python.net>

	* comtypes.automation: Support VT_I8 and VT_UI8 SAFEARRAYs.

	* comtypes._comobject: Restore compatibility with Python 2.3.

	* Add the comtypes.IServiceProvider interface.  Based on a patch
	from Michael Curran.
